<?xml version="1.0" encoding="utf-8"?>
<GridLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:alignmentMode="alignBounds"
    android:columnCount="2"
    android:columnOrderPreserved="false"
    android:paddingHorizontal="20dp"
    android:paddingVertical="15dp"
    android:background="@drawable/sport_top_rectangle"

    android:maxWidth="360dp"
    android:minWidth="300dp"
    android:rowCount="4">

    <TextView
        android:id="@+id/details_control"
        style="@style/details_element"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="2"
        android:text="@string/control" />

    <TextView
        android:id="@+id/details_control_value"
        style="@style/details_element"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        tools:text="0" />

    <TextView
        android:id="@+id/details_lms"
        style="@style/details_element"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="2"
        android:text="@string/lms" />

    <TextView
        android:id="@+id/details_lms_value"
        style="@style/details_element"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        tools:text="10" />

    <TextView
        android:id="@+id/details_sport_events"
        style="@style/details_element"
        android:layout_row="2"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="2"
        android:text="@string/sport_events" />

    <TextView
        android:id="@+id/details_sport_events_value"
        style="@style/details_element"
        android:layout_row="2"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        tools:text="10" />


    <TextView
        android:id="@+id/details_physical"
        style="@style/details_element"
        android:layout_row="3"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="2"
        android:text="@string/physical" />

    <TextView
        android:id="@+id/details_physical_value"
        style="@style/details_element"
        android:layout_row="3"
        android:layout_rowWeight="1"

        android:layout_column="1"
        android:layout_columnWeight="1"
        tools:text="10" />
</GridLayout>