<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="sportViewModel"
            type="com.example.bfuhelper.viewModel.SportViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:text="@string/menu_sport" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.SportFragment">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/sport_top_rectangle"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="9dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.example.bfuhelper.view.CircularProgressView
                        android:id="@+id/scores_progress_view"
                        android:layout_width="0dp"
                        android:layout_height="0dp"

                        app:animationDuration="1000"

                        app:backgroundColor="@color/scores_transparent"
                        app:circleSpacing="10dp"
                        app:innerBackgroundColor="@color/comings_transparent"
                        app:innerMaxProgress="@{sportViewModel.maxVisits}"
                        app:innerProgress="@{sportViewModel.visits}"

                        app:innerProgressColor="@color/comings_primary"
                        app:innerStrokeWidth="15dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintEnd_toStartOf="@+id/linearLayout_text_container"

                        app:layout_constraintHorizontal_weight="1"

                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:maxProgress="@{sportViewModel.maxScores}"
                        app:progress="@{sportViewModel.scores}"
                        app:progressColor="@color/scores_primary"
                        app:strokeWidth="15dp" />

                    <LinearLayout
                        android:id="@+id/linearLayout_text_container"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintStart_toEndOf="@+id/scores_progress_view"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            style="@style/sport_canvas_results_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/scores"
                            android:textColor="@color/scores_primary" />

                        <TextView
                            android:id="@+id/scores_text_view"
                            style="@style/sport_canvas_results_values"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="-5dp"
                            android:textColor="@color/scores_primary" />

                        <TextView
                            style="@style/sport_canvas_results_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="13dp"
                            android:text="@string/comings"
                            android:textColor="@color/comings_primary" />

                        <TextView
                            android:id="@+id/comings_text_view"
                            style="@style/sport_canvas_results_values"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="-5dp"
                            android:textColor="@color/comings_primary" />

                        <Button
                            style="@style/sport_canvas_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="13dp"
                            android:paddingHorizontal="5dp"
                            android:singleLine="true"
                            android:text="@string/sport_canvas_button" />
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </LinearLayout>
</layout>
